# Sol-EcoWaifu

./: .env.example  .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.js
codigo/: nft.yaml
codigo/program/: Cargo.toml
codigo/program/src/: burn.rs  mint.rs  transfer.rs
codigo/program_client/: package.json
codigo/program_client/lib/: rpc.ts
src/app/: layout.js
src/app/(dashboard)/: content.js  layout.js  navbar.js  sidebar.js
src/app/(home)/: content.js  navbar.js  sidebar.js
src/app/api/: route.js
src/app/api/nftApi/: route.js
src/app/api/uploadthing/: core.ts
src/app/livestream/: content.js
src/app/livestream/host/: content.js  host.js
src/app/livestream/listen/: content.js  layout.js  listen.js
src/app/nft/: content.js
src/app/products/: content.js
src/app/products/(productId)/: layout.js
src/app/products/[productId]/: content.js
src/app/products/[product_id]/: page.js
src/app/transact/: content.js  page.js
src/app/waifu-chat/: content.js  layout.js  styles.module.css
src/component/ChatBox/: ChatBox.jsx
src/component/Products/: ProductCard.js  ProductCardList.js  Star.js
src/context/: connectwalletcontext.js  huddle01context.js  sidebarcontext.js
src/provider/: productprovider.js  transactionprovider.js  waifuprovider.js
src/services/: guideSecret.json  huddle01service.js  huggingfaceservice.js  solanaservice.js
src/utils/: uploadthing.ts
